--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -1,46 +1,21 @@
-@keyframes hideSidebar {
-	0% {
-		transform: translateX(0);
-		width: var(--sidebar-width);
-	}
+.hidedSidebar > aside {
+	width: 3.8rem;
+	flex-grow: 0;
 
-	100% {
-		width: 3.8rem;
-	}
-}
-
-@keyframes showSidebar {
-	from {
-		width: 3.8rem;
-	}
-
-	to {
-		transform: translateX(0);
-		width: var(--sidebar-width);
+	> nav > div:first-child {
+		opacity: 0;
+		transition: opacity 0.35s;
 	}
 }
 
-.hidedSidebar {
-	> aside {
-		animation: hideSidebar 0.35s forwards;
-		flex-grow: 0;
-
-		> nav {
-			> div:first-child {
-				@apply transition-opacity;
-        opacity: 0;
-			}
-		}
-	}
-
-	> div {
-		@apply w-full;
-	}
+.hidedSidebar > div {
+	width: 100%;
 }
 
-.showedSidebar {
-	> aside {
-		animation: showSidebar 0.3s forwards;
-		width: var(--sidebar-width);
-	}
+.showedSidebar > aside {
+	width: var(--sidebar-width);
+}
+
+.initialSidebar > aside {
+	transition: width 0.35s;
 }
