--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -34,6 +34,13 @@
 //   }
 // }
 
+html,
 body {
 	@apply text-white bg-bg text-base font-sans antialiased;
+}
+
+@layer utilities {
+  .gris-6-cols {
+    @apply grid grid-cols-6 gap-6;
+  }
 }
